--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <!-- Main (centro de la página, zona central) -->
     <main>
       <!-- section y article (posibilidades dentro de main) -->
+      <h1>Hola Prueba</h1>
     </main>
     <!-- Footer (final de la página, zona inferior) -->
     <footer>
